# First-Django

./: pyproject.toml
backend/: db.sqlite3  secrets.json
backend/backend/: settings.py  urls.py
backend/core/: admin.py  models.py  serializsers.py  serialziers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py
