[tool.poetry]
name = "django-react-blog"
version = "0.1.0"
description = ""
authors = ["misung Kim <mizzkkim7@gmail.com>"]
readme = "README.md"
packages = [{include = "django_react_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
djangorestframework = "^3.14.0"
install = "^1.3.5"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
